Были внесены изминения в  index.html

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/spectre.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.css">
 
-    <title>Sergey Potekhin CV</title>
+    <title>Andrey S. Lic</title>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="js/vue.js"></script>
@@ -21,11 +21,11 @@
     <section class="container grid-960" id="app">
       <div class="columns">
         <div class="column col-6 col-md-12">
-          <h3>Hi! My name is <mark>{{ basic_data["name"] }}</mark></h3>
-          <p clss="notes">And this is the first CV in the world, built with <a href="https://www.ethereum.org/">Ethereum blockchain</a>. Every word or text section, which looks like <mark>this</mark>, is stored in the smart-contract.</p>
-          <p>BTW, this project (<a href="#">Ethereum_CV</a>) is open-source, so pull requests welcome!</p>
+          <h3>Привет! Меня зовут <mark>{{ basic_data["name"] }}</mark></h3>
+          <p clss="notes">And this is the first CV in the world, built with <a href="https://www.ethereum.org/">blockchain Ethereum</a>. Каждое слово или текст как<mark>этот</mark>, хранится в смарт-контракте (smart-contract).</p>
+          <p>Кстати, этот проект (<a href="#">Ethereum_Lic</a>) является открытым исходным кодом, так что Добро пожаловать!</p>
           <ul>
-            <li><code>Ropsten</code> <a href="https://ropsten.etherscan.io/address/0xcfc13ef85d5c37c0b54da991289f44450c3f30d6" target="_blank">0xcfc13ef85d5c37c0b54da991289f44450c3f30d6</a></li>
+            <li><code>Ropsten (Владелец контракта)</code> <a href="https://ropsten.etherscan.io/address/0xcfc13ef85d5c37c0b54da991289f44450c3f30d6" target="_blank">0xcfc13ef85d5c37c0b54da991289f44450c3f30d6</a></li>
           </ul>
 
           <h4>About me</h4>
