Были внесены изминения в 2 index.html

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
             <li><code>Ropsten (Владелец контракта)</code> <a href="https://ropsten.etherscan.io/address/0xcfc13ef85d5c37c0b54da991289f44450c3f30d6" target="_blank">0xcfc13ef85d5c37c0b54da991289f44450c3f30d6</a></li>
           </ul>
 
-          <h4>About me</h4>
+          <h4>Обо мне</h4>
           <p>I'm from <mark>{{basic_data["address"]}}</mark> and I love to develop things. Now my biggest passion is blockchain technology (Ethereum, Bitcoin, etc). Also I'm professsional full-stack developer.</p>
         </div>
         <div class="column col-6 col-md-12">
